# textsearch_ja

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT.textsearch_ja  Makefile  README.md  README.textsearch_ja  build.md  buildAll.cmd  encoding_eucjp.c  encoding_utf8.c  mecabrc  packer.json  packer.py  prepareBuildFiles.py  textsearch_ja-9.5.sql  textsearch_ja.c  textsearch_ja.control  textsearch_ja.def  textsearch_ja.sql.in  uninstall_textsearch_ja.sql
PG82/include/: ecpg_config.h  pg_config.h
PG82/include/server/: pg_config.h  pg_config_os.h
PG82/include/server/nodes/: pg_list.h
PG82/include/server/parser/: parse.h
PG82/include/server/utils/: fmgroids.h  palloc.h
PG82/lib_x86/: postgres.lib
PG91/include/: pg_config.h  pg_config_os.h
PG91/include/openssl/: opensslconf.h
PG91/include/server/: pg_config_os.h
PG91/include/server/catalog/: schemapg.h
PG91/include/server/parser/: gram.h
PG91/include/server/utils/: fmgroids.h  probes.h
PG91/lib_x64/: postgres.lib
PG92/include/: pg_config.h  pg_config_os.h
PG92/include/openssl/: opensslconf.h
PG92/include/server/: pg_config_os.h
PG92/include/server/catalog/: schemapg.h
PG92/include/server/parser/: gram.h
PG92/lib_x64/: postgres.lib
PG93/include/: iconv.h  pg_config_os.h
PG93/include/openssl/: opensslconf.h
PG93/include/server/: pg_config.h  pg_config_os.h
PG93/lib_x64/: postgres.lib
PG94/include/: cpl_config.h
PG94/include/server/: pg_config.h
PG94/lib_x64/: postgres.lib
dict/: english.syn  install.sql  japanese.syn
doc/: index-ja.html  index.html  textsearch_ja.html
expected/: convert.out  textsearch_ja.out
foo/: foo.def  mk.bat
foo/x64/: foo.lib
foo/x86/: foo.lib
include/: unistd.h
include/senna/: senna.h
libmecab-sdk64/: libmecab.lib
msvc/: lib.vcproj  textsearch_ja.2010.sln  textsearch_ja.2010.vcxproj  textsearch_ja.2010.vcxproj.filters  textsearch_ja.sln
pgut/: pgut-be.c  pgut-be.h
sql/: convert.sql  init.sql  textsearch_ja.sql
(+5 files in other folders)
